feat: harden lookup and tenant services